[gd_scene load_steps=5 format=3 uid="uid://c2game_table"]

[ext_resource type="Script" path="res://scripts/ui/game_table.gd" id="1_game_table"]
[ext_resource type="Theme" path="res://theme/kopp_theme.tres" id="2_theme"]
[ext_resource type="Texture2D" path="res://assets/sprites/backgrounds/tavern_floor.png" id="3_wood_texture"]
[ext_resource type="Texture2D" path="res://assets/sprites/backgrounds/forest/grass.png" id="4_forest_bg"]

[node name="GameTable" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_game_table")

[node name="RoomLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WallBackground" type="ColorRect" parent="RoomLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.25, 0.18, 0.12, 1)

[node name="CandleGlow" type="ColorRect" parent="RoomLayer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_right = 0.7
anchor_bottom = 0.15
color = Color(1, 0.85, 0.55, 0.08)

[node name="TableLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.98

[node name="TableShadow" type="ColorRect" parent="TableLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = 5.0
offset_bottom = 5.0
color = Color(0, 0, 0, 0.4)

[node name="TableSurface" type="TextureRect" parent="TableLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("3_wood_texture")
expand_mode = 1
stretch_mode = 2

[node name="TableOverlay" type="ColorRect" parent="TableLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.35, 0.22, 0.12, 0.7)

[node name="TableBorderOuter" type="ColorRect" parent="TableLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.28, 0.18, 0.10, 1)

[node name="TableInner" type="ColorRect" parent="TableLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
color = Color(0.38, 0.26, 0.15, 1)

[node name="ImaginationZone" type="Control" parent="TableLayer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.08
anchor_right = 0.98
anchor_bottom = 0.52

[node name="FrameBorderOuter" type="ColorRect" parent="TableLayer/ImaginationZone"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.55, 0.42, 0.25, 1)

[node name="FrameBorderInner" type="ColorRect" parent="TableLayer/ImaginationZone"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
color = Color(0.42, 0.30, 0.18, 1)

[node name="AdventureBackground" type="ColorRect" parent="TableLayer/ImaginationZone"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
color = Color(0.12, 0.18, 0.12, 1)

[node name="LocationBackground" type="TextureRect" parent="TableLayer/ImaginationZone"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
texture = ExtResource("4_forest_bg")
expand_mode = 1
stretch_mode = 2
modulate = Color(0.5, 0.6, 0.4, 0.4)

[node name="LocationPanel" type="PanelContainer" parent="TableLayer/ImaginationZone"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 8.0
offset_right = 80.0
offset_bottom = 35.0
grow_horizontal = 2

[node name="LocationLabel" type="Label" parent="TableLayer/ImaginationZone/LocationPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.90, 0.75, 1)
theme_override_font_sizes/font_size = 13
text = "Foret Sombre"
horizontal_alignment = 1

[node name="EnemyArea" type="HBoxContainer" parent="TableLayer/ImaginationZone"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.12
anchor_right = 0.95
anchor_bottom = 0.50
theme_override_constants/separation = 8
alignment = 1

[node name="PartyArea" type="HBoxContainer" parent="TableLayer/ImaginationZone"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.52
anchor_right = 0.95
anchor_bottom = 0.95
theme_override_constants/separation = 8
alignment = 1

[node name="GameMasterZone" type="Control" parent="TableLayer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.54
anchor_right = 0.98
anchor_bottom = 0.72

[node name="GMPanel" type="PanelContainer" parent="TableLayer/GameMasterZone"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBox" type="HBoxContainer" parent="TableLayer/GameMasterZone/GMPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GMSpriteContainer" type="CenterContainer" parent="TableLayer/GameMasterZone/GMPanel/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(60, 0)

[node name="GMSprite" type="Label" parent="TableLayer/GameMasterZone/GMPanel/HBox/GMSpriteContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "ðŸ§™"
horizontal_alignment = 1

[node name="VBox" type="VBoxContainer" parent="TableLayer/GameMasterZone/GMPanel/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="GMTitle" type="Label" parent="TableLayer/GameMasterZone/GMPanel/HBox/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.55, 1)
theme_override_font_sizes/font_size = 11
text = "Maitre du Jeu"

[node name="GMDialogue" type="Label" parent="TableLayer/GameMasterZone/GMPanel/HBox/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.85, 0.78, 0.62, 1)
theme_override_font_sizes/font_size = 10
text = "\"Bienvenue, aventuriers !\""
vertical_alignment = 1
autowrap_mode = 2

[node name="DiceContainer" type="CenterContainer" parent="TableLayer/GameMasterZone/GMPanel/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(40, 0)

[node name="DiceLabel" type="Label" parent="TableLayer/GameMasterZone/GMPanel/HBox/DiceContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ðŸŽ²"

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.005
anchor_right = 0.98
anchor_bottom = 0.06

[node name="TitlePanel" type="PanelContainer" parent="TopBar"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="TopBar/TitlePanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.55, 1)
theme_override_font_sizes/font_size = 14
text = "God of Paper"

[node name="Spacer" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GoldPanel" type="PanelContainer" parent="TopBar"]
layout_mode = 2

[node name="GoldLabel" type="Label" parent="TopBar/GoldPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.35, 1)
theme_override_font_sizes/font_size = 11
text = "100 Or"

[node name="TimePanel" type="PanelContainer" parent="TopBar"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="TopBar/TimePanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.80, 0.70, 1)
theme_override_font_sizes/font_size = 11
text = "00:00:00"

[node name="MenuButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Menu"

[node name="ActionPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.75
anchor_right = 0.98
anchor_bottom = 0.995

[node name="VBox" type="VBoxContainer" parent="ActionPanel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="MessageLabel" type="Label" parent="ActionPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.92, 0.85, 0.70, 1)
theme_override_font_sizes/font_size = 11
text = "Bienvenue ! Que souhaitez-vous faire ?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ActionButtons" type="GridContainer" parent="ActionPanel/VBox"]
layout_mode = 2
columns = 3

[node name="ExploreButton" type="Button" parent="ActionPanel/VBox/ActionButtons"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "Explorer"

[node name="BattleButton" type="Button" parent="ActionPanel/VBox/ActionButtons"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "Combat"

[node name="RestButton" type="Button" parent="ActionPanel/VBox/ActionButtons"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "Repos"

[node name="ShopButton" type="Button" parent="ActionPanel/VBox/ActionButtons"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "Boutique"

[node name="QuestButton" type="Button" parent="ActionPanel/VBox/ActionButtons"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "Quetes"

[connection signal="pressed" from="TopBar/MenuButton" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="ActionPanel/VBox/ActionButtons/ExploreButton" to="." method="_on_explore_pressed"]
[connection signal="pressed" from="ActionPanel/VBox/ActionButtons/BattleButton" to="." method="_on_battle_pressed"]
[connection signal="pressed" from="ActionPanel/VBox/ActionButtons/RestButton" to="." method="_on_rest_pressed"]
[connection signal="pressed" from="ActionPanel/VBox/ActionButtons/ShopButton" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="ActionPanel/VBox/ActionButtons/QuestButton" to="." method="_on_quest_pressed"]
